@@ -6,6 +6,11 @@ See COPYING for copying conditions.
 Please send bfast bug reports to nhomer@cs.ucla.edu
 
 Version 0.3.2
+* Updated bpostprocess to output unpaired reads when one end
+has ambiguity.
+* Updated local alignment optimization in balign (-b).
+* Updated bsort to take in the maximum number of entries for 
+memory management.
 * Fixed bug in balign where alignment could not handle switching
 directly from an insertion to a deletion (or vice versa).
 
